# openai-api-rs

./: Cargo.toml
examples/: chat_completion.rs  function_call.rs  function_call_role.rs  vision.rs
src/realtime/: types.rs
src/v1/: api.rs  audio.rs  chat_completion.rs  common.rs  completion.rs  edit.rs  embedding.rs  file.rs  fine_tune.rs  image.rs  mod.rs  moderation.rs  realtime.rs
