[package]
name = "openai-api-rs"
version = "2.0.3"
edition = "2021"
authors = ["Dongri Jin <dongrify@gmail.com>"]
license = "MIT"
description = "OpenAI API client library for Rust (unofficial)"
repository = "https://github.com/dongri/openai-api-rs"

[dependencies]
async-channel = "1.8.0"
eventsource-stream = "0.2.3"
reqwest = { version = "0.11.13", features = ["json", "stream"] }
tokio = { version = "1.32.0", default-features = false, features = ["macros", "rt", "sync"] }
futures = "0.3.25"
futures-util = "0.3.25"
anyhow = "1.0.75"
bytes = "1.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
version = "1"
features = ["derive"]
default-features = false

[dependencies.serde_json]
version = "1"
default-features = false

[dependencies.minreq]
version = "2"
default-features = false
features = ["json-using-serde", "https-rustls"]
