[package]
name = "openai-api-rs"
version = "5.0.11"
edition = "2021"
authors = ["Dongri Jin <dongrium@gmail.com>"]
license = "MIT"
description = "OpenAI API client library for Rust (unofficial)"
repository = "https://github.com/dongri/openai-api-rs"

[dependencies]
async-channel = "1.8.0"
eventsource-stream = "0.2.3"
futures = "0.3.25"
anyhow = "1.0.75"
tungstenite = "0.24.0"
url = "2.5.2"
base64 = "0.22.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["default-tls"]
rustls = ["reqwest/rustls-tls"]
default-tls = ["reqwest/default-tls"]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["charset", "http2", "json", "stream", "multipart", "socks"]

[dependencies.tokio]
version = "1.32.0"
features = ["rt-multi-thread", "macros", "rt", "sync"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.bytes]
version = "1.7.1"

[dependencies.tokio-tungstenite]
version = "0.24.0"
features = ["connect", "native-tls"]

[dependencies.futures-util]
version = "0.3.31"
features = ["sink", "std"]
